# TinyRenderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  camera.cpp  geometry.cpp  ishader.cpp  main.cpp  model.cpp  tgaimage.cpp  tinyrenderer.cpp
include/: camera.h  geometry.h  ishader.h  model.h  tgaimage.h  tinyrenderer.h  window_config.h
output/: output.tga  shadow.tga  zbuffer.tga
